# lic

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  crash-9d3291363f284cee6c6869f323f87a2730e15a3c  mkdocs.yml  renovate.json
.cursor/: agent-kit-version  hooks.json  hooks.json.lic-merge
.github/: li-downstream-repos.txt  pull_request_template.md
benchmarks/: DEPRECATED.md  README.md  manifest.toml
build-agent/: CMakeCache.txt  Makefile  cmake_install.cmake
build-wsl/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake
build-wsl-agent/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake
compiler/: CMakeLists.txt
compiler/analyze/: CMakeLists.txt  advisory.cpp  analyze.cpp
compiler/analyze/include/li/: advisory.hpp  analyze.hpp
compiler/ast/: CMakeLists.txt  ast.cpp
compiler/ast/include/li/: ast.hpp
compiler/cache/: CMakeLists.txt  check_cache.cpp
compiler/cache/include/li/: check_cache.hpp
compiler/codegen/: CMakeLists.txt  codegen.cpp  compile.cpp  emit.cpp  smoke_llvm.cpp
compiler/codegen/include/li/: codegen.hpp  compile.hpp  compile_options.hpp  emit.hpp  platform.hpp  smoke_llvm.hpp
compiler/common/: CMakeLists.txt  resource_options.cpp
compiler/common/include/li/: check_options.hpp  resource_options.hpp
compiler/config/: CMakeLists.txt  check_config.cpp
compiler/config/include/li/: check_config.hpp
compiler/diagnostics/: CMakeLists.txt  diagnostics.cpp  error_codes.cpp  terminal.cpp
compiler/diagnostics/include/li/: diagnostics.hpp  error_codes.hpp  terminal.hpp
compiler/fuzz/: CMakeLists.txt  check_fuzz.cpp  parse_fuzz.cpp
compiler/fuzz/corpus/: README.md  seed_decorator_stack  seed_decorators  seed_reserved_typosquat
compiler/fuzz/corpus/regressions/: regression_05c26f95e700  regression_1747828ea5e5  regression_1eba142cf943  regression_206db5c66614  regression_3c1d2a5d6cee  regression_6356d3d78e58  regression_99bc555050c9  regression_c1cab0a28fd0  regression_cf34889849af
compiler/lexer/: CMakeLists.txt  lexer.cpp  token.cpp
compiler/lexer/include/li/: lexer.hpp  token.hpp
compiler/lic/: CMakeLists.txt  check_cmd.cpp  main.cpp  workspace_check.cpp
compiler/lic/include/li/: check_cmd.hpp  workspace_check.hpp
compiler/mir/: CMakeLists.txt  lower.cpp  mir.cpp  mir_abi.cpp  mir_runtime_link.cpp  num_stable.cpp
compiler/mir/include/li/: mir.hpp  mir_abi.hpp  mir_runtime_link.hpp  num_stable.hpp
compiler/parser/: CMakeLists.txt  parser.cpp
compiler/parser/include/li/: parser.hpp
compiler/types/: CMakeLists.txt  borrowck.cpp  import_resolve.cpp  numeric_types.cpp  policy.cpp  policy_module.cpp  prelude.cpp  trusted_extern.cpp  typecheck.cpp  types.cpp
compiler/types/include/li/: borrowck.hpp  import_resolve.hpp  numeric_types.hpp  policy.hpp  prelude.hpp  proof_cli.hpp  trusted_extern.hpp  typecheck.hpp  types.hpp
compiler/verify/: CMakeLists.txt  call_requires.cpp  vc_emit.cpp  vc_emit_lean.cpp  vc_summary.cpp  vc_witness.cpp
compiler/verify/include/li/: call_requires.hpp  vc_emit.hpp  vc_summary.hpp  vc_witness.hpp
deploy/: README.md
docs/: README.md  benchmarks-http.md  benchmarks.md  getting-started.md  index.md  requirements.txt  security-http-exploits.md  security-nginx-src-audit.md
examples/: arrays.li  hello.li
installer/: LINUX-RUN.txt  Launch-LiWorldStudio.cmd  LiWorldStudio.iss  MACOS-RUN.txt  README.md  WINDOWS-RUN.txt  launch-li-world-studio.ps1
li-tests/: README.md  manifest.toml  run_all.sh  run_httpd_config.sh  run_routing.sh  run_security.sh
proof-database/: DISCREPANCIES.md  discrepancies.json
proof-db/: README.md  attribution.toml  baseline.json  baseline.jsonl  catalog-baseline.jsonl  discrepancies.toml  expected.json  export-math.json  index.json  manifest.toml  reporter.md
runtime/: CMakeLists.txt  li_parallel.h  li_rt.c  li_rt.h  li_rt_h2.c  li_rt_h2.h  li_rt_httpd.c  li_rt_lig.c  li_rt_lig.h  li_rt_lig_cuda.c  li_rt_lig_cuda.h  li_rt_lig_metal.h  li_rt_lig_metal.mm  li_rt_lig_metal_stub.c  li_rt_lkir_parse.c  li_rt_lkir_parse.h  li_rt_lkir_spirv.c  li_rt_lkir_spirv.h  li_rt_log.c  li_rt_net.c  li_rt_net.h  li_rt_ph_io.c  li_rt_studio_paint_capture.c  li_rt_tls.c  li_rt_tls.h  lig-ptx-catalog.toml  lig_cuda_matmul2_ptx.inc  lig_cuda_ptx_catalog.c  lig_cuda_ptx_catalog.h  lig_cuda_timing_probe_main.c  studio_mcp_stdio.c
scripts/: Ensure-StudioInstallerAssets.ps1  LiWorldStudio-Runtime.ps1  _li-world-studio-packaging-common.sh  _patch_ml.py  _run_header_strip_check.py  _tmp_bisect_studio.py  _tmp_bisect_studio2.py  _tmp_check_deps.py  _ux07_chrome.li  _ux07_chrome_palette.li  _ux07_compose_shell.li  _ux07_helpers.li  (+427 more)
(+4285 files in other folders)
