add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(analyze)
add_subdirectory(diagnostics)
add_subdirectory(config)
add_subdirectory(analyze)
add_subdirectory(lexer)
add_subdirectory(parser)
add_subdirectory(ast)
add_subdirectory(types)
add_subdirectory(mir)
add_subdirectory(codegen)
add_subdirectory(verify)
add_subdirectory(lic)
if(LI_BUILD_FUZZ)
  add_subdirectory(fuzz)
endif()
